--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -60,18 +60,19 @@
       <ul class="main-menu">
         <li><a href="{{ path('home') }}">Willkommen</a></li>
         <li><a href="#">About</a></li>
+        <li><a href="blog.html">News</a></li>
+        <li><a href="contact.html">Contact</a></li>
         <li>
-          <a href="#">Pages</a>
+          <a href="#">Mitarbeiter</a>
           <ul class="sub-menu">
-            <li><a href="category.html">Category</a></li>
+            <li><a href="{{ path('gericht.bearbeiten') }}">Gerichte</a></li>
             <li><a href="playlist.html">Playlist</a></li>
             <li><a href="artist.html">Artist</a></li>
             <li><a href="blog.html">Blog</a></li>
             <li><a href="contact.html">Contact</a></li>
           </ul>
         </li>
-        <li><a href="blog.html">News</a></li>
-        <li><a href="contact.html">Contact</a></li>
+        
       </ul>
     </header>
     <!-- Header section end -->
@@ -109,7 +110,7 @@
     <!-- Intro section end -->
 
     <!-- How section -->
-    <section class="how-section spad set-bg" data-setbg="img/how-to-bg.jpg">
+    <section class="how-section spad set-bg" data-setbg="{{ asset('img/how-to-bg.jpg')}}">
       <div class="container text-white">
         <div class="section-title">
           <h2>
