--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -27,12 +27,12 @@
     <!-- Main Stylesheets -->
     <link rel="stylesheet" href="{{ asset('css/style.css') }}" />
 
-    <!--                                          
+    <!--                                                 
     [if lt IE 9]>
 		<script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
 		<script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
 	  <![endif]
-    -->
+           -->
 
     {% block stylesheets %}
 
@@ -50,11 +50,12 @@
         <img src="{{ asset('img/logo.png') }}" alt="" />
       </a>
       <div class="header-right">
-        <a href="#" class="hr-btn">Help</a>
-        <span>|</span>
         <div class="user-panel">
-          <a href="" class="login">Login</a>
-          <a href="" class="register">Create an account</a>
+          {% if is_granted('IS_AUTHENTICATED_FULLY') %}
+            <a href="{{ path('app_logout') }}" class="register">Logout</a>
+          {% else %}
+            <a href="{{ path('app_login') }}" class="register">Login</a>
+          {% endif %}
         </div>
       </div>
       <ul class="main-menu">
@@ -62,17 +63,19 @@
         <li><a href="#">About</a></li>
         <li><a href="blog.html">News</a></li>
         <li><a href="contact.html">Contact</a></li>
-        <li>
-          <a href="#">Mitarbeiter</a>
-          <ul class="sub-menu">
-            <li><a href="{{ path('gericht.bearbeiten') }}">Gerichte</a></li>
-            <li><a href="playlist.html">Playlist</a></li>
-            <li><a href="artist.html">Artist</a></li>
-            <li><a href="blog.html">Blog</a></li>
-            <li><a href="contact.html">Contact</a></li>
-          </ul>
-        </li>
-        
+
+        {% if is_granted('IS_AUTHENTICATED_FULLY') %}
+          <li>
+            <a href="#">Mitarbeiter</a>
+            <ul class="sub-menu">
+              <li><a href="{{ path('gericht.bearbeiten') }}">Gerichte</a></li>
+              <li><a href="{{ path('gericht.anlegen') }}">Anlegen</a></li>
+              <li><a href="artist.html">Artist</a></li>
+              <li><a href="blog.html">Blog</a></li>
+              <li><a href="{{ path('reg') }}" class="register">Registrieren</a></li>
+            </ul>
+          </li>
+        {% endif %}
       </ul>
     </header>
     <!-- Header section end -->
@@ -110,7 +113,8 @@
     <!-- Intro section end -->
 
     <!-- How section -->
-    <section class="how-section spad set-bg" data-setbg="{{ asset('img/how-to-bg.jpg')}}">
+    <section class="how-section spad set-bg"
+      data-setbg="{{ asset('img/how-to-bg.jpg') }}">
       <div class="container text-white">
         <div class="section-title">
           <h2>
