--- a/templates/gericht/index.html.twig
+++ b/templates/gericht/index.html.twig
@@ -28,6 +28,9 @@
             Beschreibung
           </td>
           <td>
+            Kategorie
+          </td>
+          <td>
             Preis
           </td>
           <td>
@@ -43,12 +46,24 @@
           <tr>
             <td>
               {{ gericht.id }}
-            </td>            
+            </td>
             <td>
-              <a href="{{ path('gericht.anzeigen', {id: gericht.id}) }}">{{ gericht.name }}</a>
+              <a href="{{
+                path(
+                  'gericht.anzeigen',
+                  {
+                    id: gericht.id
+                  }
+                )
+                }}">
+                {{ gericht.name }}
+              </a>
             </td>
             <td>
               {{ gericht.beschreibung }}
+            </td>
+            <td>
+              {{ gericht.kategorie }}
             </td>
             <td>
               {{ gericht.preis }}
