--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -8,56 +8,36 @@
   <!-- Hero section -->
     <section class="hero-section">
       <div class="hero-slider owl-carousel">
+
+        {% for gericht in gerichte %}
         <div class="hs-item">
           <div class="container">
             <div class="row">
+              
               <div class="col-lg-6">
                 <div class="hs-text">
                   <h2>
-                    <span>Music</span> for everyone.
+                    <span>{{gericht.name}}</span>!
                   </h2>
                   <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
-                    do eiusmod tempor incididunt ut labore et dolore magna
-                    aliqua. Quis ipsum suspendisse ultrices gravida.
+                    {{gericht.beschreibung}}
                   </p>
-                  <a href="#" class="site-btn">Download Now</a>
-                  <a href="#" class="site-btn sb-c2">Start free trial</a>
+                  <a class="site-btn" href="{{ path('menu') }}">Menükarte</a>
+                  <a href="{{ path('bestellen', { id: gericht.id }) }}" class="site-btn sb-c2">Bestellen</a>
                 </div>
               </div>
+
               <div class="col-lg-6">
                 <div class="hr-img">
-                  <img src="{{ asset('img/hero-bg.png') }}" alt="" />
+                  <img src="{{ asset('bilder/' ~ gericht.bild) }}" alt="" />
                 </div>
               </div>
+
             </div>
           </div>
         </div>
-        <div class="hs-item">
-          <div class="container">
-            <div class="row">
-              <div class="col-lg-6">
-                <div class="hs-text">
-                  <h2>
-                    <span>Listen</span> to new music.
-                  </h2>
-                  <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
-                    do eiusmod tempor incididunt ut labore et dolore magna
-                    aliqua. Quis ipsum suspendisse ultrices gravida.
-                  </p>
-                  <a href="#" class="site-btn">Download Now</a>
-                  <a href="#" class="site-btn sb-c2">Start free trial</a>
-                </div>
-              </div>
-              <div class="col-lg-6">
-                <div class="hr-img">
-                  <img src="{{ asset('img/hero-bg.png') }}" alt="" />
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
+        {% endfor %}
+        
       </div>
     </section>
     <!-- Hero section end -->
