--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -70,9 +70,9 @@
             <ul class="sub-menu">
               <li><a href="{{ path('gericht.bearbeiten') }}">Gerichte</a></li>
               <li><a href="{{ path('gericht.anlegen') }}">Anlegen</a></li>
-              <li><a href="artist.html">Artist</a></li>
-              <li><a href="blog.html">Blog</a></li>
+              <li><a href="{{ path('bestellung') }}">Bestellungen</a></li>            
               <li><a href="{{ path('reg') }}" class="register">Registrieren</a></li>
+              <li><a href="{{ path('app_logout') }}">Logout</a></li>
             </ul>
           </li>
         {% endif %}
@@ -437,6 +437,9 @@
     <!-- Footer section end -->
 
     <!-- ====== Javascripts & Jquery ====== -->
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+
     <script src="{{ asset('js/jquery-3.2.1.min.js') }}"></script>
     <script src="{{ asset('js/bootstrap.min.js') }}"></script>
     <script src="{{ asset('js/jquery.slicknav.min.js') }}"></script>
